# bamdam

./: .gitattributes  .gitignore  BamDam.py  CHANGELOG.md  LICENSE  PlotDamage.R  PlotPMD.R  README.md  bamdam  bamdam.py  extractreads.py  pyproject.toml  removeunmappedheaders
.github/workflows/: ci.yaml  release.yaml
example/: kapk_subset_metazoa.html  microbe_krona.html
src/bamdam/: alignment_utils.py  bamdam.py  combine.py  compute.py  extract.py  krona.py  plotbaminfo.py  plotdamage.py  shrink.py  utils.py
tests/: tests.py
tests/data/: small.bam  small.lca
