[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamdam"
version = "0.1.2"
description = "A post-mapping, post-least-common-ancestor toolkit for ancient DNA analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Bianca De Sanctis", email = "bddesanctis@gmail.com" }]
dependencies = ["pysam", "hyperloglog", "matplotlib", "tqdm"]

[project.scripts]
bamdam = "bamdam.bamdam:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bamdam"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
bamdam = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
mypy = ">=1.15.0,<2"
pytest-cov = ">=6.0.0,<7"

[tool.pixi.feature.dev.tasks]
format = "ruff format src"
lint = "ruff check"
qc = { depends-on = ["format", "lint"] }

[tool.pixi.feature.dev.tasks.test]
cmd = [
  "pytest",
  "--cov=bamdam",
  "--cov-report=xml:coverage-report/coverage.xml",
  "--cov-report=term-missing",
  "tests/tests.py"
]

# Publish
[tool.pixi.feature.publish.dependencies]
twine = ">=6.1.0,<7"
python-build = ">=1.2.2,<2"

[tool.pixi.feature.publish.tasks]
build = { cmd = "python -m build", description = "Build the package into the dist/ directory" }
check-build = { cmd = "python -m twine check dist/*", depends-on = [
  "build",
], description = "Check that the package can be uploaded" }

